# postgres-notify

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: tests.yml
src/: config.rs  error.rs  inner.rs  lib.rs  messages.rs  notify.rs
src/snapshots/: postgres_notify__tests__listen__notify.snap  postgres_notify__tests__raise-notices.snap  postgres_notify__tests__reconnect-before.snap  postgres_notify__tests__reconnect-during.snap  postgres_notify__tests__reconnect-failure.snap  postgres_notify__tests__subscribed-executionlog.snap  postgres_notify__tests__subscribed-notify.snap  postgres_notify__tests__timeout-messages.snap  postgres_notify__tests__unsubscribed-executionlog.snap  postgres_notify__tests__unsubscribed-notify.snap
