[package]
name = "postgres-notify"
version = "0.3.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/macprog-guy/postgres-notify.git"
keywords = ["postgres","database","logs","notfiy"]
categories = ["database","development-tools::debugging"]
description = "Library that makes it easy to subscribe to PostgreSQL notifications"
rust-version = "1.85"

[dependencies]
chrono = {version=">=0.4", features=["serde"], optional=true}
chrono-tz = {version=">=0.10.3", features=["serde"], optional=true}
futures = "0.3.31"
rand = "0.9.2"
serde = {version=">=1", features=["derive"], optional=true}
thiserror = "2.0.14"
tokio = {version=">=1", features=["rt","sync","time"]}
tokio-postgres = ">=0.6"
tracing = {version=">=0.1", optional=true}

[dev-dependencies]
insta = {version=">=1.42", features=["redactions","json"]}
regex = "1.11.1"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.0", features = ["postgres"] }

[features]
default = ["chrono","serde","tracing"]
tracing = ["dep:tracing"]
chrono = ["dep:chrono","dep:chrono-tz"]
serde  = ["dep:serde"]

[badges]
maintenance = {status="actively-developed"}
